--- a/Domino Console/DominoConsole/DominoConsole/DominoConsole.csproj
+++ b/Domino Console/DominoConsole/DominoConsole/DominoConsole.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\Library\Library\Library\Library.csproj" />
+    </ItemGroup>
+
 </Project>
